feat(friend): implement friend service
